force-app/main/default/objects/LM_ArtigoCD__c/LM_ArtigoCD__c.object-meta.xml
<CustomObject>
    <label>Artigo</label>
    <nameField>
        <label>Código LM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artigos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>