force-app/main/default/objects/LM_ArtigoCD__c/fields/Designacao__c.field-meta.xml
<CustomField>
    <fullName>Designacao__c</fullName>
    <label>Designação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>