force-app/main/default/objects/LM_ArtigoCD__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Certificado de Devolução</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Artigos</relationshipLabel>
    <relationshipName>Artigos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>