force-app/main/default/objects/LM_ArtigoCD__c/fields/Peso_Total__c.field-meta.xml
<CustomField>
    <fullName>Peso_Total__c</fullName>
    <formula>Quantidade__c *  Peso_Unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>