force-app/main/default/objects/LM_ArtigoCD__c/fields/Peso_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Peso_Unitario__c</fullName>
    <label>Peso Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>