force-app/main/default/objects/LM_ArtigoCD__c/fields/PVP__c.field-meta.xml
<CustomField>
    <fullName>PVP__c</fullName>
    <label>PVP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>